--- a/popup.html
+++ b/popup.html
@@ -3,19 +3,11 @@
   <head>
     <title>Getting Started Extension's Popup</title>
     <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
-    </style>
+	    body {
+	        min-width: 357px;
+	        min-height: 450px;
+	    }
+	</style>
 
     <!--
       - JavaScript and HTML must be in separate files: see our Content Security
@@ -23,9 +15,10 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
-    <script src="popup.js"></script>
+     
+	<script src="popup.js" type="text/javascript"></script>
   </head>
-  <body>
-  </body>
+	<body>
+	</body>
 </html>
 
